# PRISM

./: .gitignore  PRISM.ipynb  README.md  _multi_gpu_stage_worker.py  _shard_worker.py  implementation_plan.md  pyproject.toml  requirements.txt  setup.py  sua.txt
bash/: run.txt  run_full_pipeline.bat  run_full_pipeline.sh
prism/: __init__.py  api.py  pipeline.py  utils.py
prism/adapters/: __init__.py  base.py  llama.py  registry.py
prism/assign/: __init__.py  optimize.py  pareto.py
prism/assignment/: __init__.py  lp_solver.py  memory.py
prism/atlas/: __init__.py  actions.py  calibration.py  dataset.py  profile.py  protocols.py  quic.py  response.py  runtime.py  schema.py  scoring.py  solver.py  transforms.py
prism/benchmark/: __init__.py  e2e.py  speed.py
prism/cli/: __init__.py  assign.py  atlas_assign.py  atlas_profile.py  atlas_protocol.py  atlas_quic_plan.py  atlas_train.py  demo.py  precompute_rtn.py  profile.py  quic.py  run.py  train_meta.py
prism/data/: __init__.py  io.py  schemas.py  synthetic.py
prism/inference/: __init__.py  runner.py
prism/kernels/: __init__.py
prism/meta/: __init__.py  checkpoint.py  features.py  infer.py  model.py  train.py
prism/models/: __init__.py  mock_transformer.py
prism/profile/: __init__.py  inspect.py  pipeline.py  rules.py
prism/profiling/: __init__.py  features.py  meta_learner.py  sensitivity.py  sensitivity_eval.py
prism/quantization/: __init__.py  rtn.py
prism/quic/: __init__.py  correct.py  measure.py  pipeline.py  synthetic.py
prism/refinement/: __init__.py  quic.py
prism/rtn/: __init__.py  manifest.py  pack.py  pack_gptq.py  precompute.py  quantize.py
prism/runtime/: __init__.py  assemble.py  autogptq.py  backends.py  gemm.py  marlin.py  rtn_custom.py  runner.py
prism/support/: __init__.py  config.py  model_loading.py  naming.py
scripts/: research_eval_template.json  run_full_pipeline.py  stage0_sharded.py  summarize_pipeline_run.py
tests/prism/: test_assignment.py  test_atlas_actions.py  (+13 more)
(+11 files in other folders)
