[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prism"
version = "0.1.0"
description = "PRISM mixed-precision quantization pipeline"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0.0",
  "scipy>=1.10.0",
  "numpy>=1.24.0",
  "transformers>=4.35.0",
  "datasets>=2.14.0",
  "tqdm",
]

[project.scripts]
prism-train-meta = "prism.cli.train_meta:main"
prism-profile = "prism.cli.profile:main"
prism-assign = "prism.cli.assign:main"
prism-quic = "prism.cli.quic:main"
prism-precompute-rtn = "prism.cli.precompute_rtn:main"
prism-run = "prism.cli.run:main"
prism-demo = "prism.cli.demo:main"
prism-atlas-train = "prism.cli.atlas_train:main"
prism-atlas-profile = "prism.cli.atlas_profile:main"
prism-atlas-assign = "prism.cli.atlas_assign:main"
prism-atlas-quic-plan = "prism.cli.atlas_quic_plan:main"
prism-atlas-protocol = "prism.cli.atlas_protocol:main"

[tool.pytest.ini_options]
addopts = "-ra --basetemp=.pytest_tmp_local/basetemp -o cache_dir=.pytest_tmp_local/cache"
testpaths = ["tests"]
